--- a/wit-gui/src/main/resources/dev/joshpetit/wit/gui/launcher/main.css
+++ b/wit-gui/src/main/resources/dev/joshpetit/wit/gui/launcher/main.css
@@ -5,3 +5,10 @@
 	-fx-font-size: 40px;
 	-fx-background-color: #336699;
 }
+.special-text {
+	-fx-text-fill: green;
+}
+
+.button-pane.special-text {
+	-fx-text-fill: green;
+}
